syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.kneo.grpc.stubs.project";

option java_outer_classname = "ProjectProto";

package project;

service ProjectGrpcService {
  rpc AddProject (ProjectRequest) returns (ProjectResponse) {}
}

message ProjectRequest {
  string name = 1;
  string description = 2;
}

message ProjectResponse {
  string id = 1;
}